refactor: convert booking form to template literal

--- a/landing/index.html
+++ b/landing/index.html
@@ -155,141 +155,8 @@
             <img src="/assets/bed-icon.svg" alt="Bed Icon" /> Stays
           </button>
         </div>
-
-        <!-- Flights Form -->
-        <div id="flightForm" class="booking-form booking-flight-form">
-          <div class="grid">
-            <div class="form-group">
-              <label>From - To</label>
-              <input
-                type="text"
-                id="fromToInput"
-                value="Lahore - Karachi"
-                placeholder="Lahore - Karachi"
-              />
-              <span class="fs-16 swap-icon">⇄</span>
-            </div>
-
-            <div class="form-group trip">
-              <label>Trip</label>
-              <select>
-                <option>Return</option>
-                <option>One Way</option>
-              </select>
-            </div>
-
-            <div class="return-depart">
-              <div class="form-group">
-                <label>Depart</label>
-                <div class="input-with-icon input-calendar">
-                  <input type="date" />
-                  <img
-                    src="/assets/calendar-icon.svg"
-                    alt="Calendar"
-                    class="input-icon-right input-calendar-icon"
-                  />
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label>Return</label>
-                <div class="input-with-icon input-calendar">
-                  <input type="date" />
-                  <img
-                    src="/assets/calendar-icon.svg"
-                    alt="Calendar"
-                    class="input-icon-right input-calendar-icon"
-                  />
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label>Passenger - Class</label>
-              <input type="text" placeholder="1 Passenger, Economy" />
-            </div>
-          </div>
-        </div>
-
-        <!-- Flights Actions -->
-        <div class="actions flight-actions">
-          <a href="">
-            <button class="inline-flex btn-black flight-btn">
-              <img src="/assets/plus-icon.svg" alt="" />&nbsp;Add Promo Code
-            </button>
-          </a>
-          <a href="">
-            <button class="inline-flex btn-primary flight-btn">
-              <img src="/assets/show-icon.svg" alt="" />&nbsp;Show Flights
-            </button>
-          </a>
-        </div>
-
-        <!-- Stays Form -->
-        <div id="stayForm" class="booking-form booking-stay-form hidden">
-          <div class="grid">
-            <div class="form-group">
-              <label>Enter Destination</label>
-              <div class="input-with-icon">
-                <img src="/assets/bed-icon.svg" alt="Bed" class="input-icon" />
-                <input type="text" placeholder="Istanbul, Turkey" />
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label>Check In</label>
-              <div class="input-with-icon input-calendar">
-                <input type="date" />
-                <img
-                  src="/assets/calendar-icon.svg"
-                  alt="Calendar"
-                  class="input-icon-right input-calendar-icon"
-                />
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label>Check Out</label>
-              <div class="input-with-icon input-calendar">
-                <input type="date" />
-                <img
-                  src="/assets/calendar-icon.svg"
-                  alt="Calendar"
-                  class="input-icon-right input-calendar-icon"
-                />
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label>Rooms & Guests</label>
-              <div class="input-with-icon">
-                <img
-                  src="/assets/user-icon.svg"
-                  alt="User"
-                  class="input-icon"
-                />
-                <select>
-                  <option>1 room, 2 guests</option>
-                  <option>2 rooms, 4 guests</option>
-                </select>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Stays Actions -->
-        <div class="actions stays-actions hidden">
-          <a href="">
-            <button class="inline-flex btn-black stays-btn">
-              <img src="/assets/plus-icon.svg" alt="" />&nbsp;Add Promo Code
-            </button>
-          </a>
-          <a href="">
-            <button class="inline-flex btn-primary stays-btn">
-              <img src="/assets/building-icon.svg" alt="" />&nbsp;Show Stays
-            </button>
-          </a>
-        </div>
+        <div id="flight-content"></div>
+        <div id="stay-content" class="hidden"></div>
       </div>
     </section>
 
