refactor: convert flight form to template literal in flight search

--- a/flight/flightsearch.html
+++ b/flight/flightsearch.html
@@ -148,70 +148,7 @@
           <h1>Where are you flying?</h1>
         </div>
 
-        <!-- Flights Form -->
-        <div id="flightForm" class="booking-form booking-flight-form">
-          <div class="grid">
-            <div class="form-group">
-              <label>From - To</label>
-              <input
-                type="text"
-                id="fromToInput"
-                value="Lahore - Karachi"
-                placeholder="Lahore - Karachi"
-              />
-              <span class="fs-16 swap-icon">⇄</span>
-            </div>
-
-            <div class="form-group trip">
-              <label>Trip</label>
-              <select>
-                <option>Return</option>
-                <option>One Way</option>
-              </select>
-            </div>
-
-            <div class="return-depart">
-              <div class="form-group">
-                <label>Depart</label>
-                <div class="input-with-icon input-calendar">
-                  <input type="date" />
-                  <img
-                    src="/assets/calendar-icon.svg"
-                    alt="Calendar"
-                    class="input-icon-right input-calendar-icon"
-                  />
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label>Return</label>
-                <div class="input-with-icon input-calendar">
-                  <input type="date" />
-                  <img
-                    src="/assets/calendar-icon.svg"
-                    alt="Calendar"
-                    class="input-icon-right input-calendar-icon"
-                  />
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label>Passenger - Class</label>
-              <input type="text" placeholder="1 Passenger, Economy" />
-            </div>
-          </div>
-        </div>
-
-        <!-- Flights Actions -->
-        <div class="actions flight-actions">
-          <button class="inline-flex btn-black flight-btn">
-            <img src="/assets/plus-icon.svg" alt="" />&nbsp;Add Promo Code
-          </button>
-          <button class="inline-flex btn-primary flight-btn">
-            <img src="/assets/show-icon.svg" alt="" />&nbsp;Show Flights
-          </button>
-        </div>
+        <div id="flight-content"></div>
       </div>
     </section>
 
