--- a/landing/index.html
+++ b/landing/index.html
@@ -49,7 +49,7 @@
             >
           </a>
           <a
-            href="../hotel/hotelsearch.html"
+            href="../stay/searchstays.html"
             class="inline-flex nav-link stays-btn-nav stays-btn nav-booking-tab"
           >
             <img src="/assets/bed-white-icon.svg" alt="bed" /><span
@@ -92,7 +92,7 @@
           <img src="/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;Find Flights</span>
         </a>
-        <a href="#" class="mobile-link">
+        <a href="../stay/searchstays.html" class="mobile-link">
           <img src="/assets/bed-icon.svg" alt="bed" />
           <span class="fs-16 fw-semi-bold">&nbsp;Find Stays</span>
         </a>
