--- a/stay/searchstays.html
+++ b/stay/searchstays.html
@@ -148,67 +148,7 @@
           <h1>Where are you flying?</h1>
         </div>
 
-        <!-- Stays Form -->
-        <div id="stayForm" class="booking-form booking-stay-form">
-          <div class="grid">
-            <div class="form-group">
-              <label>Enter Destination</label>
-              <div class="input-with-icon">
-                <img src="/assets/bed-icon.svg" alt="Bed" class="input-icon" />
-                <input type="text" placeholder="Istanbul, Turkey" />
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label>Check In</label>
-              <div class="input-with-icon input-calendar">
-                <input type="date" />
-                <img
-                  src="/assets/calendar-icon.svg"
-                  alt="Calendar"
-                  class="input-icon-right input-calendar-icon"
-                />
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label>Check Out</label>
-              <div class="input-with-icon input-calendar">
-                <input type="date" />
-                <img
-                  src="/assets/calendar-icon.svg"
-                  alt="Calendar"
-                  class="input-icon-right input-calendar-icon"
-                />
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label>Rooms & Guests</label>
-              <div class="input-with-icon">
-                <img
-                  src="/assets/user-icon.svg"
-                  alt="User"
-                  class="input-icon"
-                />
-                <select>
-                  <option>1 room, 2 guests</option>
-                  <option>2 rooms, 4 guests</option>
-                </select>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Stays Actions -->
-        <div class="actions stays-actions">
-          <button class="inline-flex btn-black stays-btn">
-            <img src="/assets/plus-icon.svg" alt="" />&nbsp;Add Promo Code
-          </button>
-          <button class="inline-flex btn-primary stays-btn">
-            <img src="/assets/building-icon.svg" alt="" />&nbsp;Show Stays
-          </button>
-        </div>
+        <div id="stay-content"></div>
       </div>
     </section>
 
